frontend/src/components/LoginComponent/login_component.scss
.login {
  height: 100%;

  display: flex;
  justify-content: center;
  align-items: center;
  border: 7px solid rgb(60, 48, 134);
  border-radius: 8%;
  border-style: double;

  &__component {
    position: relative;
    width: 250px;
    height: 250px;
    background-color: #ffffff;
    padding: 40px;
    border-radius: 20px;
    padding-bottom: 55px;
    font-size: 1.3em;

    &__img {
      background-image: url(/src/assets/images/logo.svg);
      background-size: cover;
      background-position: center;
      height: 130px;
      width: 250px;
      text-align: center;
      padding: 0;
      position: relative;
      top: -40px;
      //left: +0px;
      display: block;
      margin-bottom: -55px; // Space between the image and the text fields
    }

    &__username-field {
      position: relative;

      &__icon {
        position: absolute;
        left: 7px;
        top: 50%;
        transform: translateY(-55%);
        color: rgb(110, 121, 187);
        pointer-events: none; // Prevent the icon from interfering with clicking on the input
      }
      &__icon-active {
        color: #ffffff; // This is the color for when there is input in the fields
      }

      &__input {
        opacity: 1;
        display: block;
        border: none;
        outline: none;
        width: 100%;
        padding: 10px 13px 10px 34px;
        margin: 10px 0 0 0;
        font-size: 0.8em;
        border-radius: 150px;
        background: #3c3c3c;
        color: #ffffff;
        box-sizing: border-box;
      }

      &__input::placeholder {
        color: rgb(110, 121, 187);
      }
    }

    &__password-field {
      position: relative;

      &__icon {
        position: absolute;
        left: 7px;
        top: 50%;
        transform: translateY(-60%);
        color: rgb(110, 121, 187);
        pointer-events: none; // Prevent the icon from interfering with clicking on the input
      }

      &__icon-active {
        color: #ffffff; // This is the color for when there is input in the fields
      }

      &__input {
        opacity: 1;
        display: block;
        border: none;
        outline: none;
        width: 100%;
        padding: 10px 13px 10px 34px;
        margin: 10px 0 0 0;
        font-size: 0.8em;
        border-radius: 150px;
        background: #3c3c3c;
        color: #ffffff;
        box-sizing: border-box;
      }

      &__input::placeholder {
        color: rgb(110, 121, 187);
      }
    }

    &__error {
      opacity: 1;
      display: block;
      border: none;
      outline: none;
      width: 100%;
      padding: 10px 13px 10px 34px;
      margin: 10px 0 0 0;
      font-size: 0.8em;
      border-radius: 150px;
      color: #ffffff;
      box-sizing: border-box;
      background: rgb(
        130,
        0,
        0
      ) !important; //! This makes color of fields red when there is an error
    }

    &__error::placeholder {
      color: rgb(110, 121, 187);
    }

    &__forgot-password {
      display: block;
      color: #0000ee;
      font-size: 0.7em;
      text-align: right;
      margin-top: 12px;
      text-decoration: none;
      cursor: pointer;
    }

    &__forgot-password:hover {
      text-decoration: underline;
    }

    &__forgot-password:active {
      color: #3c3c3c;
    }

    &__error-message {
      position: relative;
      color: red; // or any color you want for the error message
      font-size: 0.7em; // adjust size as needed
      margin-top: 10px; // space between the error message and the input fields
      text-align: center; // center the error message
      left: -10%;
      width: 120%;
    }

    &__submit {
      position: absolute;
      bottom: 12px;
      left: 42px;
      width: 75%;
      padding: 16px !important;
      margin: 38px 0 0 0;
      border-radius: 30px;
      font-weight: 600;
      background: linear-gradient(
        144deg,
        #000000,
        rgb(60, 48, 134) 50%,
        #000000
      );
      color: #fff;
      border: 3px solid #000000;

      @media (hover: hover) and (pointer: coarse) {
        .login__component__submit:hover {
          background: linear-gradient(
            1deg,
            #e44e4e,
            rgb(213, 213, 213) 50%,
            #da5f5f
          );
          /* Either keep the hover effect same as the normal state or apply a mild effect */
        }
      }
    }

    &__submit:hover {
      background: linear-gradient(
        144deg,
        #000000,
        rgb(92, 74, 206) 50%,
        #000000
      );
      cursor: pointer;
      transition: all 0.4s ease;
    }

    &__submit:active {
      background: linear-gradient(
        164deg,
        #000000,
        rgb(92, 74, 206) 50%,
        #000000
      );
      transition: all 0.4s ease;
    }
  }
}

